104
- encode special characters in directory names to be accesible via smb
- update VNSI to d6847c3
- update Sat>IP plugin to 6573c38
- update restfulapi to 0.2.6.5

103
- add streamdev HEVC support
- update VNSI to abd24d5
- update dvbapi to 897c50e
- update Sat>IP plugin to db0c18b

102
- add VDR HEVC parser
- add Sat>IP devices option
- update VNSI to 1.5.0
- update dvbapi to 897c50e

101
- update Sat>IP plugin to support RTP/TCP which allows error free streaming
- network mode is now default in dvbapi (socket mode is dropped)
- update all plugins to latest

100
- update for LibreELEC 8.0